--- a/themes/cactus/layout/_partial/comments.ejs
+++ b/themes/cactus/layout/_partial/comments.ejs
@@ -12,3 +12,11 @@
         </div>
     </div>
 <% } %>
+
+<script src="https://utteranc.es/client.js"
+        repo="[ENTER REPO HERE]"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
