--- a/themes/cactus/layout/index.ejs
+++ b/themes/cactus/layout/index.ejs
@@ -34,6 +34,7 @@
 
 <section id="writing">
   <span class="h1"><a href="<%- url_for(theme.nav.articles) %>"><%= __('index.articles') %></a></span>
+  <i class="fa-solid fa-tag"></i> <%- tagcloud(theme.tags_overview) %>
   <% if (theme.tags_overview && site.tags.length) { %>
   <span class="h2"><%= __('index.topics') %></span>
   <span class="widget tagcloud">
