--- a/themes/cactus/layout/_partial/footer.ejs
+++ b/themes/cactus/layout/_partial/footer.ejs
@@ -1,33 +1,33 @@
 <footer id="footer">
-      <div class="footer-left">
-        <%= __('footer.copyright') %> &copy;
-        <% var endYear = (theme.copyright && theme.copyright.end_year) ? theme.copyright.end_year : new Date().getFullYear() %>
-        <% var startYear = (theme.copyright && theme.copyright.start_year) ? theme.copyright.start_year : new Date().getFullYear() %>
-        <%= startYear >= endYear ? endYear : startYear + "-" + endYear %>
-        <%= config.author || config.title %>
-      </div>
-      <div class="footer-right">
-        <nav>
-          <ul>
-            <% for (var i in theme.nav) { %><!--
-          --><li><a href="<%- url_for(theme.nav[i]) %>"><%= __('nav.'+i).replace("nav.", "") %></a></li><!--
-        --><% } %>
-          </ul>
-          <ul>
-            <% if (theme.busuanzi && theme.busuanzi.enable){ %>
-              <!-- 不蒜子统计 -->
-              <span id="busuanzi_container_site_pv">
-                  本站总访问量<span id="busuanzi_value_site_pv"></span>次
-              </span>
-              <span class="post-meta-divider">|</span>
-              <span id="busuanzi_container_site_uv" style='display:none'>
-                      本站访客数<span id="busuanzi_value_site_uv"></span>人
-              </span>
-            <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-            <% } %>
-          </ul>
-        </nav>
-      </div>
-      
+  <div class="footer-left">
+    <%= __('footer.copyright') %> &copy;
+    <% var endYear = (theme.copyright && theme.copyright.end_year) ? theme.copyright.end_year : new Date().getFullYear() %>
+    <% var startYear = (theme.copyright && theme.copyright.start_year) ? theme.copyright.start_year : new Date().getFullYear() %>
+    <%= startYear >= endYear ? endYear : startYear + "-" + endYear %>
+    <%= config.author || config.title %>
+  </div>
+  <div class="footer-right">
+    <nav>
+      <ul>
+        <% for (var i in theme.nav) { %><!--
+      --><li><a href="<%- url_for(theme.nav[i]) %>"><%= __('nav.'+i).replace("nav.", "") %></a></li><!--
+    --><% } %>
+      </ul>
+      <ul>
+        <% if (theme.busuanzi && theme.busuanzi.enable){ %>
+          <!-- 不蒜子统计 -->
+          <span id="busuanzi_container_site_pv">
+            <i class="fa fa-eye"></i> <span id="busuanzi_value_site_pv"></span>
+          </span>
+          <span class="post-meta-divider">|</span>
+          <span id="busuanzi_container_site_pv"></span>
+            <i class="fa fa-user"></i> <span id="busuanzi_value_site_uv"></span>
+          </span>
+        <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+        <% } %>
+      </ul>
+    </nav>
+  </div>
+  
 </footer>
 
