--- a/themes/cactus/layout/index.ejs
+++ b/themes/cactus/layout/index.ejs
@@ -60,7 +60,7 @@
   <% if (theme.posts_overview.show_all_posts) { %>
     <%- partial('_partial/pagination') %>
   <% } %>
-  想要了解更多文章：<a href="/search/">去搜索</a>
+  想要了解更多文章：<a href="/search/">去搜索</a> | <a href="/archives/">去归档</a>
 </section>
 
 <% if (site.data.projects) { %>
