--- a/themes/cactus/layout/_partial/search.ejs
+++ b/themes/cactus/layout/_partial/search.ejs
@@ -5,3 +5,21 @@
   <div id="search-result"></div>
   <p class="search-no-result"><%= __('search.no_results') %></p>
 </section>
+
+<section id="writing" style="margin-top: 30px;">
+  <span style="font-weight: 600;">猜你喜欢</span>
+  <ul class="post-list">
+    <% var field_sort = theme.posts_overview.sort_updated ? 'updated' : 'date' %>
+    <% if (theme.posts_overview.show_all_posts) { %>
+      <% var show_posts = page.posts.sort(field_sort, 'desc') %>
+    <% } else { %>
+      <% var show_posts = site.posts.sort(field_sort, 'desc').limit(theme.posts_overview.post_count || 5) %>
+    <% } %>
+    <% show_posts.each(function(post, i){ %>
+      <li class="post-item">
+        <%- partial('_partial/post/date', { post: post, class_name: 'meta' }) %>
+        <span><%- partial('_partial/post/title', { post: post, index: true, class_name: '' }) %></span>
+      </li>
+    <% }); %>
+  </ul>
+</section>
