--- a/themes/cactus/layout/_partial/search.ejs
+++ b/themes/cactus/layout/_partial/search.ejs
@@ -7,7 +7,7 @@
 </section>
 
 <section id="writing" style="margin-top: 30px;">
-  <span style="font-weight: 600;">猜你喜欢</span>
+  <span style="font-weight: 600;">最近发布</span>
   <ul class="post-list">
     <% var field_sort = theme.posts_overview.sort_updated ? 'updated' : 'date' %>
     <% if (theme.posts_overview.show_all_posts) { %>
